# vacation-cruft

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
data/: sheet.xcf
src/snake/: app.c  app.h  draw.c  main.c  player.c  player.h  sprite.h  tilesheet.c  tilesheet.h  update.c  util.h
